public/css/app.css
@import url("https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css");

/*
* NOTE: We should avoid using this file. It's mostly here as a "just-in-case" but for individual component styles we want to use styled-components.
* 
* For example, if we have a div and we want it's width to 20px, instead of doing this in app.css:
*   .wideDiv {
*      width: 20px;
*   }
* 
* We should do this in the .tsx file:
*   const WideDiv = styled("div")`
*     width: 20px;
*   `;
*/

.ant-layout-header {
  padding: unset !important;
  background: white !important;

  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.15);
}

.ant-card {
  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px 0px;
}

.ant-upload-wrapper {
  display: flex !important;
  flex-direction: row-reverse !important;
  align-items: center !important;
}

.ant-upload-list-item {
  margin-top: 0 !important;
}

